# DetectingDementia_2025

./: .bashrc  .coverage  .gitignore  CONTRIBUTING.md  GITHUB_CHECKLIST.md  LICENSE  QUICKSTART.md  README.md  SUMMARY.md  TODO.md  TRANSFORMER_GUIDE.md  pyproject.toml
data/: .webui_secret_key  README.md
src/dementia_detection/: __init__.py  data.py  features.py  main.py  models.py  transformer.py
tests/: __init__.py  conftest.py  test_data.py  test_features.py  test_models.py  test_transformer.py
